--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -1,3 +1,4 @@
+---
 layout: page
 title: "CV"
 permalink: /cv/
@@ -14,152 +15,36 @@ permalink: /cv/
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
-      background: #f8f9fa;
+      background-color: #f9f9f9;
       color: #333;
       line-height: 1.6;
     }
     .container {
       max-width: 900px;
-      margin: auto;
+      margin: 2rem auto;
       background: #fff;
       padding: 2rem;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
     h1, h2 {
       color: #003366;
+      margin-top: 0;
     }
     h1 {
-      font-size: 2em;
-      margin-bottom: 0;
+      font-size: 2.2em;
     }
-    .contact {
-      margin-bottom: 1rem;
+    .contact, .download {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 0.5rem;
     }
     .contact a {
       color: #003366;
       text-decoration: none;
     }
-    .section {
-      margin-top: 2rem;
-    }
-    ul {
-      padding-left: 1.2em;
-    }
-    .download {
-      text-align: right;
-      margin-top: -2rem;
-      margin-bottom: 1.5rem;
-    }
     .download a {
       background: #003366;
       color: white;
-      padding: 0.4rem 1rem;
-      border-radius: 4px;
-      text-decoration: none;
-    }
-    .download a:hover {
-      background: #00264d;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>Tara Prasad Sharma</h1>
-    <div class="contact">
-      <p>Email: <a href="mailto:star_2025@tamu.edu">star_2025@tamu.edu</a> | Phone: +91-89060-53358</p>
-      <p>Texas A&amp;M University, USA | <a href="https://linkedin.com/in/taraps" target="_blank">LinkedIn</a> | <a href="https://tarapsharma.github.io" target="_blank">Website</a></p>
-    </div>
-
-    <div class="download">
-      <a href="TaraPrasadSharma_CV.pdf" target="_blank">Download PDF</a>
-    </div>
-
-    <div class="section">
-      <h2>Objective</h2>
-      <p>Ph.D. student in Mathematics at Texas A&amp;M University with a strong foundation in pure and applied mathematics. Passionate about research in Data Science, Machine Learning, Mathematical Biology, and Computational Mathematics.</p>
-    </div>
-
-    <div class="section">
-      <h2>Education</h2>
-      <ul>
-        <li><strong>Ph.D. in Mathematics</strong>, Texas A&amp;M University, USA (2025–Present)</li>
-        <li><strong>M.Sc. in Mathematics</strong>, Sikkim University, India (2023)<br><em>Thesis:</em> Stone–Čech Compactification</li>
-        <li><strong>B.Ed</strong>, Sikkim University, India (2021)</li>
-        <li><strong>B.Sc. (Hons) in Mathematics</strong>, Sikkim University, India (2017)</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Research Interests</h2>
-      <ul>
-        <li>Data Science and Machine Learning</li>
-        <li>Mathematical Biology and Biostatistics</li>
-        <li>Computational Mathematics and Mathematical Modeling</li>
-        <li>Topology and Functional Analysis</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Research Experience</h2>
-      <p><strong>Project: Stone–Čech Compactification</strong>, Sikkim University (2023)</p>
-      <ul>
-        <li>Investigated compactifications in topology</li>
-        <li>Applied algebraic topology to compact space analysis</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Teaching Experience</h2>
-      <ul>
-        <li><strong>Mathematics Tutor</strong> (Online/Offline, 2014–Present)</li>
-        <li><strong>Mathematics Teacher (TGT/PGT)</strong> (2017–2022)</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Technical Skills</h2>
-      <ul>
-        <li><strong>Programming:</strong> Python (Intermediate), MATLAB, C (Basic)</li>
-        <li><strong>Tools:</strong> LaTeX, Mathematica, Git, MS Office</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Key Achievements</h2>
-      <ul>
-        <li>Outstanding Volunteer Award (2017–Present)</li>
-        <li>Top Performer, B.Ed Program (2021)</li>
-        <li>Student Leader, Mathematics Society (2021–2023)</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Positions of Responsibility</h2>
-      <ul>
-        <li>Core Team Member, Mathematics Society (2021–2023)</li>
-        <li>Senior Coordinator, Student Welfare Club (2021–2022)</li>
-        <li>Department Representative (2021–2023)</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Workshops and Conferences</h2>
-      <ul>
-        <li>Internship, IIT-Guwahati, under Prof. Anajan K. Chakrabarty (2023)</li>
-        <li>Winter School on Real Analysis (2022)</li>
-        <li>Conference on Mathematical Modeling and Data Science (2022)</li>
-        <li>Instructional School in Real Analysis (2021)</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>Volunteer Experience</h2>
-      <ul>
-        <li>Course Coordinator and Data Analyst, Sikkim Vipassana Centre (2017–Present)</li>
-        <li>Regular Blood Donor</li>
-        <li>Event Coordinator, G20 Summit (2023)</li>
-      </ul>
-    </div>
-  </div>
-</body>
-</html>
+      padding: 0.4rem
