--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -1,7 +1,7 @@
 ---
-layout: page
+/* layout: page
 title: "CV"
-permalink: /cv/
+permalink: /cv/ 
 ---
 
 <!DOCTYPE html>
@@ -47,4 +47,4 @@ permalink: /cv/
     .download a {
       background: #003366;
       color: white;
-      padding: 0.4rem
+      padding: 0.4rem */
