--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -1,10 +1,10 @@
 ---
-/* layout: page
+ # layout: page
 title: "CV"
 permalink: /cv/ 
 ---
 
-<!DOCTYPE html>
+ # <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -34,17 +34,18 @@ permalink: /cv/
     h1 {
       font-size: 2.2em;
     }
-    .contact, .download {
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      gap: 0.5rem;
+    # .contact, .download {
+      #  display: flex;
+ #      justify-content: space-between;
+      # flex-wrap: wrap;
+    #   gap: 0.5rem;
     }
-    .contact a {
-      color: #003366;
-      text-decoration: none;
+    # .contact a {
+     #  color: #003366;
+      # text-decoration: none;
     }
-    .download a {
-      background: #003366;
-      color: white;
-      padding: 0.4rem */
+  #   .download a {
+      # background: #003366;
+      # color: white;
+      # padding: 0.4rem 
+#   <iframe src="https://drive.google.com/file/d/1wB_SAsrCQRkrRX5cMPzK-777UvYo2nqd/preview" width="640" height="480" allow="autoplay"></iframe
